--- a/examples-generated/ec2/routetable.yaml
+++ b/examples-generated/ec2/routetable.yaml
@@ -9,6 +9,13 @@ metadata:
 spec:
   forProvider:
     region: us-west-1
+    route:
+    - cidrBlock: 10.0.1.0/24
+      gatewayIdSelector:
+        matchLabels:
+          testing.upbound.io/example-name: example
+    - egressOnlyGatewayId: ${aws_egress_only_internet_gateway.example.id}
+      ipv6CidrBlock: ::/0
     tags:
       Name: example
     vpcIdSelector:
