--- a/package/crds/ec2.aws.upbound.io_routetables.yaml
+++ b/package/crds/ec2.aws.upbound.io_routetables.yaml
@@ -64,10 +64,149 @@ spec:
                 type: string
               forProvider:
                 properties:
+                  propagatingVgws:
+                    description: A list of virtual gateways for propagation.
+                    items:
+                      type: string
+                    type: array
                   region:
                     description: Region is the region you'd like your resource to
                       be created in.
                     type: string
+                  route:
+                    description: A list of route objects. Their keys are documented
+                      below. This argument is processed in attribute-as-blocks mode.
+                      This means that omitting this argument is interpreted as ignoring
+                      any existing routes. To remove all managed routes an empty list
+                      should be specified. See the example above.
+                    items:
+                      properties:
+                        carrierGatewayId:
+                          description: Identifier of a carrier gateway. This attribute
+                            can only be used when the VPC contains a subnet which
+                            is associated with a Wavelength Zone.
+                          type: string
+                        cidrBlock:
+                          description: The CIDR block of the route.
+                          type: string
+                        coreNetworkArn:
+                          description: The Amazon Resource Name (ARN) of a core network.
+                          type: string
+                        destinationPrefixListId:
+                          description: The ID of a managed prefix list destination
+                            of the route.
+                          type: string
+                        egressOnlyGatewayId:
+                          description: Identifier of a VPC Egress Only Internet Gateway.
+                          type: string
+                        gatewayId:
+                          description: Identifier of a VPC internet gateway or a virtual
+                            private gateway.
+                          type: string
+                        gatewayIdRef:
+                          description: Reference to a InternetGateway in ec2 to populate
+                            gatewayId.
+                          properties:
+                            name:
+                              description: Name of the referenced object.
+                              type: string
+                            policy:
+                              description: Policies for referencing.
+                              properties:
+                                resolution:
+                                  default: Required
+                                  description: Resolution specifies whether resolution
+                                    of this reference is required. The default is
+                                    'Required', which means the reconcile will fail
+                                    if the reference cannot be resolved. 'Optional'
+                                    means this reference will be a no-op if it cannot
+                                    be resolved.
+                                  enum:
+                                  - Required
+                                  - Optional
+                                  type: string
+                                resolve:
+                                  description: Resolve specifies when this reference
+                                    should be resolved. The default is 'IfNotPresent',
+                                    which will attempt to resolve the reference only
+                                    when the corresponding field is not present. Use
+                                    'Always' to resolve the reference on every reconcile.
+                                  enum:
+                                  - Always
+                                  - IfNotPresent
+                                  type: string
+                              type: object
+                          required:
+                          - name
+                          type: object
+                        gatewayIdSelector:
+                          description: Selector for a InternetGateway in ec2 to populate
+                            gatewayId.
+                          properties:
+                            matchControllerRef:
+                              description: MatchControllerRef ensures an object with
+                                the same controller reference as the selecting object
+                                is selected.
+                              type: boolean
+                            matchLabels:
+                              additionalProperties:
+                                type: string
+                              description: MatchLabels ensures an object with matching
+                                labels is selected.
+                              type: object
+                            policy:
+                              description: Policies for selection.
+                              properties:
+                                resolution:
+                                  default: Required
+                                  description: Resolution specifies whether resolution
+                                    of this reference is required. The default is
+                                    'Required', which means the reconcile will fail
+                                    if the reference cannot be resolved. 'Optional'
+                                    means this reference will be a no-op if it cannot
+                                    be resolved.
+                                  enum:
+                                  - Required
+                                  - Optional
+                                  type: string
+                                resolve:
+                                  description: Resolve specifies when this reference
+                                    should be resolved. The default is 'IfNotPresent',
+                                    which will attempt to resolve the reference only
+                                    when the corresponding field is not present. Use
+                                    'Always' to resolve the reference on every reconcile.
+                                  enum:
+                                  - Always
+                                  - IfNotPresent
+                                  type: string
+                              type: object
+                          type: object
+                        instanceId:
+                          description: Identifier of an EC2 instance.
+                          type: string
+                        ipv6CidrBlock:
+                          description: The Ipv6 CIDR block of the route.
+                          type: string
+                        localGatewayId:
+                          description: Identifier of a Outpost local gateway.
+                          type: string
+                        natGatewayId:
+                          description: Identifier of a VPC NAT gateway.
+                          type: string
+                        networkInterfaceId:
+                          description: Identifier of an EC2 network interface.
+                          type: string
+                        transitGatewayId:
+                          description: Identifier of an EC2 Transit Gateway.
+                          type: string
+                        vpcEndpointId:
+                          description: Identifier of a VPC Endpoint.
+                          type: string
+                        vpcPeeringConnectionId:
+                          description: Identifier of a VPC peering connection.
+                          type: string
+                      type: object
+                    type: array
                   tags:
                     additionalProperties:
                       type: string
@@ -337,67 +476,6 @@ spec:
                   ownerId:
                     description: The ID of the AWS account that owns the route table.
                     type: string
-                  propagatingVgws:
-                    description: A list of virtual gateways for propagation.
-                    items:
-                      type: string
-                    type: array
-                  route:
-                    description: A list of route objects. Their keys are documented
-                      below. This argument is processed in attribute-as-blocks mode.
-                      This means that omitting this argument is interpreted as ignoring
-                      any existing routes. To remove all managed routes an empty list
-                      should be specified. See the example above.
-                    items:
-                      properties:
-                        carrierGatewayId:
-                          description: Identifier of a carrier gateway. This attribute
-                            can only be used when the VPC contains a subnet which
-                            is associated with a Wavelength Zone.
-                          type: string
-                        cidrBlock:
-                          description: The CIDR block of the route.
-                          type: string
-                        coreNetworkArn:
-                          description: The Amazon Resource Name (ARN) of a core network.
-                          type: string
-                        destinationPrefixListId:
-                          description: The ID of a managed prefix list destination
-                            of the route.
-                          type: string
-                        egressOnlyGatewayId:
-                          description: Identifier of a VPC Egress Only Internet Gateway.
-                          type: string
-                        gatewayId:
-                          description: Identifier of a VPC internet gateway or a virtual
-                            private gateway.
-                          type: string
-                        instanceId:
-                          description: Identifier of an EC2 instance.
-                          type: string
-                        ipv6CidrBlock:
-                          description: The Ipv6 CIDR block of the route.
-                          type: string
-                        localGatewayId:
-                          description: Identifier of a Outpost local gateway.
-                          type: string
-                        natGatewayId:
-                          description: Identifier of a VPC NAT gateway.
-                          type: string
-                        networkInterfaceId:
-                          description: Identifier of an EC2 network interface.
-                          type: string
-                        transitGatewayId:
-                          description: Identifier of an EC2 Transit Gateway.
-                          type: string
-                        vpcEndpointId:
-                          description: Identifier of a VPC Endpoint.
-                          type: string
-                        vpcPeeringConnectionId:
-                          description: Identifier of a VPC peering connection.
-                          type: string
-                      type: object
-                    type: array
                   tagsAll:
                     additionalProperties:
                       type: string
