--- a/package/crds/ec2.aws.upbound.io_vpcendpoints.yaml
+++ b/package/crds/ec2.aws.upbound.io_vpcendpoints.yaml
@@ -98,12 +98,187 @@ spec:
                     description: Region is the region you'd like your resource to
                       be created in.
                     type: string
+                  routeTableIds:
+                    description: One or more route table IDs. Applicable for endpoints
+                      of type Gateway.
+                    items:
+                      type: string
+                    type: array
+                  securityGroupIdRefs:
+                    description: References to SecurityGroup in ec2 to populate securityGroupIds.
+                    items:
+                      description: A Reference to a named object.
+                      properties:
+                        name:
+                          description: Name of the referenced object.
+                          type: string
+                        policy:
+                          description: Policies for referencing.
+                          properties:
+                            resolution:
+                              default: Required
+                              description: Resolution specifies whether resolution
+                                of this reference is required. The default is 'Required',
+                                which means the reconcile will fail if the reference
+                                cannot be resolved. 'Optional' means this reference
+                                will be a no-op if it cannot be resolved.
+                              enum:
+                              - Required
+                              - Optional
+                              type: string
+                            resolve:
+                              description: Resolve specifies when this reference should
+                                be resolved. The default is 'IfNotPresent', which
+                                will attempt to resolve the reference only when the
+                                corresponding field is not present. Use 'Always' to
+                                resolve the reference on every reconcile.
+                              enum:
+                              - Always
+                              - IfNotPresent
+                              type: string
+                          type: object
+                      required:
+                      - name
+                      type: object
+                    type: array
+                  securityGroupIdSelector:
+                    description: Selector for a list of SecurityGroup in ec2 to populate
+                      securityGroupIds.
+                    properties:
+                      matchControllerRef:
+                        description: MatchControllerRef ensures an object with the
+                          same controller reference as the selecting object is selected.
+                        type: boolean
+                      matchLabels:
+                        additionalProperties:
+                          type: string
+                        description: MatchLabels ensures an object with matching labels
+                          is selected.
+                        type: object
+                      policy:
+                        description: Policies for selection.
+                        properties:
+                          resolution:
+                            default: Required
+                            description: Resolution specifies whether resolution of
+                              this reference is required. The default is 'Required',
+                              which means the reconcile will fail if the reference
+                              cannot be resolved. 'Optional' means this reference
+                              will be a no-op if it cannot be resolved.
+                            enum:
+                            - Required
+                            - Optional
+                            type: string
+                          resolve:
+                            description: Resolve specifies when this reference should
+                              be resolved. The default is 'IfNotPresent', which will
+                              attempt to resolve the reference only when the corresponding
+                              field is not present. Use 'Always' to resolve the reference
+                              on every reconcile.
+                            enum:
+                            - Always
+                            - IfNotPresent
+                            type: string
+                        type: object
+                    type: object
+                  securityGroupIds:
+                    description: The ID of one or more security groups to associate
+                      with the network interface. Applicable for endpoints of type
+                      Interface. If no security groups are specified, the VPC's default
+                      security group is associated with the endpoint.
+                    items:
+                      type: string
+                    type: array
                   serviceName:
                     description: The service name. For AWS services the service name
                       is usually in the form com.amazonaws.<region>.<service> (the
                       SageMaker Notebook service is an exception to this rule, the
                       service name is in the form aws.sagemaker.<region>.notebook).
                     type: string
+                  subnetIdRefs:
+                    description: References to Subnet in ec2 to populate subnetIds.
+                    items:
+                      description: A Reference to a named object.
+                      properties:
+                        name:
+                          description: Name of the referenced object.
+                          type: string
+                        policy:
+                          description: Policies for referencing.
+                          properties:
+                            resolution:
+                              default: Required
+                              description: Resolution specifies whether resolution
+                                of this reference is required. The default is 'Required',
+                                which means the reconcile will fail if the reference
+                                cannot be resolved. 'Optional' means this reference
+                                will be a no-op if it cannot be resolved.
+                              enum:
+                              - Required
+                              - Optional
+                              type: string
+                            resolve:
+                              description: Resolve specifies when this reference should
+                                be resolved. The default is 'IfNotPresent', which
+                                will attempt to resolve the reference only when the
+                                corresponding field is not present. Use 'Always' to
+                                resolve the reference on every reconcile.
+                              enum:
+                              - Always
+                              - IfNotPresent
+                              type: string
+                          type: object
+                      required:
+                      - name
+                      type: object
+                    type: array
+                  subnetIdSelector:
+                    description: Selector for a list of Subnet in ec2 to populate
+                      subnetIds.
+                    properties:
+                      matchControllerRef:
+                        description: MatchControllerRef ensures an object with the
+                          same controller reference as the selecting object is selected.
+                        type: boolean
+                      matchLabels:
+                        additionalProperties:
+                          type: string
+                        description: MatchLabels ensures an object with matching labels
+                          is selected.
+                        type: object
+                      policy:
+                        description: Policies for selection.
+                        properties:
+                          resolution:
+                            default: Required
+                            description: Resolution specifies whether resolution of
+                              this reference is required. The default is 'Required',
+                              which means the reconcile will fail if the reference
+                              cannot be resolved. 'Optional' means this reference
+                              will be a no-op if it cannot be resolved.
+                            enum:
+                            - Required
+                            - Optional
+                            type: string
+                          resolve:
+                            description: Resolve specifies when this reference should
+                              be resolved. The default is 'IfNotPresent', which will
+                              attempt to resolve the reference only when the corresponding
+                              field is not present. Use 'Always' to resolve the reference
+                              on every reconcile.
+                            enum:
+                            - Always
+                            - IfNotPresent
+                            type: string
+                        type: object
+                    type: object
+                  subnetIds:
+                    description: The ID of one or more subnets in which to create
+                      a network interface for the endpoint. Applicable for endpoints
+                      of type GatewayLoadBalancer and Interface.
+                    items:
+                      type: string
+                    type: array
                   tags:
                     additionalProperties:
                       type: string
@@ -411,30 +586,9 @@ spec:
                     description: Whether or not the VPC Endpoint is being managed
                       by its service - true or false.
                     type: boolean
-                  routeTableIds:
-                    description: One or more route table IDs. Applicable for endpoints
-                      of type Gateway.
-                    items:
-                      type: string
-                    type: array
-                  securityGroupIds:
-                    description: The ID of one or more security groups to associate
-                      with the network interface. Applicable for endpoints of type
-                      Interface. If no security groups are specified, the VPC's default
-                      security group is associated with the endpoint.
-                    items:
-                      type: string
-                    type: array
                   state:
                     description: The state of the VPC endpoint.
                     type: string
-                  subnetIds:
-                    description: The ID of one or more subnets in which to create
-                      a network interface for the endpoint. Applicable for endpoints
-                      of type GatewayLoadBalancer and Interface.
-                    items:
-                      type: string
-                    type: array
                   tagsAll:
                     additionalProperties:
                       type: string
