--- a/package/crds/ec2.aws.upbound.io_vpcpeeringconnections.yaml
+++ b/package/crds/ec2.aws.upbound.io_vpcpeeringconnections.yaml
@@ -64,6 +64,31 @@ spec:
                 type: string
               forProvider:
                 properties:
+                  accepter:
+                    description: An optional configuration block that allows for VPC
+                      Peering Connection options to be set for the VPC that accepts
+                      the peering connection (a maximum of one).
+                    items:
+                      properties:
+                        allowClassicLinkToRemoteVpc:
+                          description: Allow a local linked EC2-Classic instance to
+                            communicate with instances in a peer VPC. This enables
+                            an outbound communication from the local ClassicLink connection
+                            to the remote VPC.
+                          type: boolean
+                        allowRemoteVpcDnsResolution:
+                          description: Allow a local VPC to resolve public DNS hostnames
+                            to private IP addresses when queried from instances in
+                            the peer VPC.
+                          type: boolean
+                        allowVpcToRemoteClassicLink:
+                          description: Allow a local VPC to communicate with a linked
+                            EC2-Classic instance in a peer VPC. This enables an outbound
+                            communication from the local VPC to the remote ClassicLink
+                            connection.
+                          type: boolean
+                      type: object
+                    type: array
                   autoAccept:
                     description: Accept the peering (both VPCs need to be in the same
                       AWS account and region).
@@ -83,7 +108,7 @@ spec:
                       VPC Peering Connection.
                     type: string
                   peerVpcIdRef:
-                    description: Reference to a VPC to populate peerVpcId.
+                    description: Reference to a VPC in ec2 to populate peerVpcId.
                     properties:
                       name:
                         description: Name of the referenced object.
@@ -117,7 +142,7 @@ spec:
                     - name
                     type: object
                   peerVpcIdSelector:
-                    description: Selector for a VPC to populate peerVpcId.
+                    description: Selector for a VPC in ec2 to populate peerVpcId.
                     properties:
                       matchControllerRef:
                         description: MatchControllerRef ensures an object with the
@@ -159,6 +184,31 @@ spec:
                     description: Region is the region you'd like your resource to
                       be created in.
                     type: string
+                  requester:
+                    description: A optional configuration block that allows for VPC
+                      Peering Connection options to be set for the VPC that requests
+                      the peering connection (a maximum of one).
+                    items:
+                      properties:
+                        allowClassicLinkToRemoteVpc:
+                          description: Allow a local linked EC2-Classic instance to
+                            communicate with instances in a peer VPC. This enables
+                            an outbound communication from the local ClassicLink connection
+                            to the remote VPC.
+                          type: boolean
+                        allowRemoteVpcDnsResolution:
+                          description: Allow a local VPC to resolve public DNS hostnames
+                            to private IP addresses when queried from instances in
+                            the peer VPC.
+                          type: boolean
+                        allowVpcToRemoteClassicLink:
+                          description: Allow a local VPC to communicate with a linked
+                            EC2-Classic instance in a peer VPC. This enables an outbound
+                            communication from the local VPC to the remote ClassicLink
+                            connection.
+                          type: boolean
+                      type: object
+                    type: array
                   tags:
                     additionalProperties:
                       type: string
@@ -423,59 +473,9 @@ spec:
                   acceptStatus:
                     description: The status of the VPC Peering Connection request.
                     type: string
-                  accepter:
-                    description: An optional configuration block that allows for VPC
-                      Peering Connection options to be set for the VPC that accepts
-                      the peering connection (a maximum of one).
-                    items:
-                      properties:
-                        allowClassicLinkToRemoteVpc:
-                          description: Allow a local linked EC2-Classic instance to
-                            communicate with instances in a peer VPC. This enables
-                            an outbound communication from the local ClassicLink connection
-                            to the remote VPC.
-                          type: boolean
-                        allowRemoteVpcDnsResolution:
-                          description: Allow a local VPC to resolve public DNS hostnames
-                            to private IP addresses when queried from instances in
-                            the peer VPC.
-                          type: boolean
-                        allowVpcToRemoteClassicLink:
-                          description: Allow a local VPC to communicate with a linked
-                            EC2-Classic instance in a peer VPC. This enables an outbound
-                            communication from the local VPC to the remote ClassicLink
-                            connection.
-                          type: boolean
-                      type: object
-                    type: array
                   id:
                     description: The ID of the VPC Peering Connection.
                     type: string
-                  requester:
-                    description: A optional configuration block that allows for VPC
-                      Peering Connection options to be set for the VPC that requests
-                      the peering connection (a maximum of one).
-                    items:
-                      properties:
-                        allowClassicLinkToRemoteVpc:
-                          description: Allow a local linked EC2-Classic instance to
-                            communicate with instances in a peer VPC. This enables
-                            an outbound communication from the local ClassicLink connection
-                            to the remote VPC.
-                          type: boolean
-                        allowRemoteVpcDnsResolution:
-                          description: Allow a local VPC to resolve public DNS hostnames
-                            to private IP addresses when queried from instances in
-                            the peer VPC.
-                          type: boolean
-                        allowVpcToRemoteClassicLink:
-                          description: Allow a local VPC to communicate with a linked
-                            EC2-Classic instance in a peer VPC. This enables an outbound
-                            communication from the local VPC to the remote ClassicLink
-                            connection.
-                          type: boolean
-                      type: object
-                    type: array
                   tagsAll:
                     additionalProperties:
                       type: string
