--- a/package/crds/elbv2.aws.upbound.io_lbtargetgroups.yaml
+++ b/package/crds/elbv2.aws.upbound.io_lbtargetgroups.yaml
@@ -331,6 +331,7 @@ spec:
                         type: object
                     type: object
                 required:
+                - name
                 - region
                 type: object
               providerConfigRef:
