--- a/package/crds/elbv2.aws.upbound.io_lblisteners.yaml
+++ b/package/crds/elbv2.aws.upbound.io_lblisteners.yaml
@@ -252,11 +252,93 @@ spec:
                                     arn:
                                       description: ARN of the target group.
                                       type: string
+                                    arnRef:
+                                      description: Reference to a LBTargetGroup to
+                                        populate arn.
+                                      properties:
+                                        name:
+                                          description: Name of the referenced object.
+                                          type: string
+                                        policy:
+                                          description: Policies for referencing.
+                                          properties:
+                                            resolution:
+                                              default: Required
+                                              description: Resolution specifies whether
+                                                resolution of this reference is required.
+                                                The default is 'Required', which means
+                                                the reconcile will fail if the reference
+                                                cannot be resolved. 'Optional' means
+                                                this reference will be a no-op if
+                                                it cannot be resolved.
+                                              enum:
+                                              - Required
+                                              - Optional
+                                              type: string
+                                            resolve:
+                                              description: Resolve specifies when
+                                                this reference should be resolved.
+                                                The default is 'IfNotPresent', which
+                                                will attempt to resolve the reference
+                                                only when the corresponding field
+                                                is not present. Use 'Always' to resolve
+                                                the reference on every reconcile.
+                                              enum:
+                                              - Always
+                                              - IfNotPresent
+                                              type: string
+                                          type: object
+                                      required:
+                                      - name
+                                      type: object
+                                    arnSelector:
+                                      description: Selector for a LBTargetGroup to
+                                        populate arn.
+                                      properties:
+                                        matchControllerRef:
+                                          description: MatchControllerRef ensures
+                                            an object with the same controller reference
+                                            as the selecting object is selected.
+                                          type: boolean
+                                        matchLabels:
+                                          additionalProperties:
+                                            type: string
+                                          description: MatchLabels ensures an object
+                                            with matching labels is selected.
+                                          type: object
+                                        policy:
+                                          description: Policies for selection.
+                                          properties:
+                                            resolution:
+                                              default: Required
+                                              description: Resolution specifies whether
+                                                resolution of this reference is required.
+                                                The default is 'Required', which means
+                                                the reconcile will fail if the reference
+                                                cannot be resolved. 'Optional' means
+                                                this reference will be a no-op if
+                                                it cannot be resolved.
+                                              enum:
+                                              - Required
+                                              - Optional
+                                              type: string
+                                            resolve:
+                                              description: Resolve specifies when
+                                                this reference should be resolved.
+                                                The default is 'IfNotPresent', which
+                                                will attempt to resolve the reference
+                                                only when the corresponding field
+                                                is not present. Use 'Always' to resolve
+                                                the reference on every reconcile.
+                                              enum:
+                                              - Always
+                                              - IfNotPresent
+                                              type: string
+                                          type: object
+                                      type: object
                                     weight:
                                       description: Weight. The range is 0 to 999.
                                       type: number
-                                  required:
-                                  - arn
                                   type: object
                                 type: array
                             required:
@@ -312,8 +394,7 @@ spec:
                             groups, use a forward block instead.
                           type: string
                         targetGroupArnRef:
-                          description: Reference to a LBTargetGroup in elbv2 to populate
-                            targetGroupArn.
+                          description: Reference to a LBTargetGroup to populate targetGroupArn.
                           properties:
                             name:
                               description: Name of the referenced object.
@@ -348,8 +429,7 @@ spec:
                           - name
                           type: object
                         targetGroupArnSelector:
-                          description: Selector for a LBTargetGroup in elbv2 to populate
-                            targetGroupArn.
+                          description: Selector for a LBTargetGroup to populate targetGroupArn.
                           properties:
                             matchControllerRef:
                               description: MatchControllerRef ensures an object with
@@ -401,7 +481,7 @@ spec:
                     description: ARN of the load balancer.
                     type: string
                   loadBalancerArnRef:
-                    description: Reference to a LB in elbv2 to populate loadBalancerArn.
+                    description: Reference to a LB to populate loadBalancerArn.
                     properties:
                       name:
                         description: Name of the referenced object.
@@ -435,7 +515,7 @@ spec:
                     - name
                     type: object
                   loadBalancerArnSelector:
-                    description: Selector for a LB in elbv2 to populate loadBalancerArn.
+                    description: Selector for a LB to populate loadBalancerArn.
                     properties:
                       matchControllerRef:
                         description: MatchControllerRef ensures an object with the
